--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -7140,13 +7140,25 @@ diluted solutions.
 \end{itemize}
 \textbf{Notes}
 \begin{itemize}
-\item{Note}
+\item{Move Safe - Done}
+\item{Jeremy is giving 16 lectures - cool!}
+\item{Matt Swinny, Cladio, James Miller, Jeremy Osborne, Dr. Marianno, all have gone to India}
+\item{Kevin needs 160 mg UO\tsbs{2} per experiment?}
+\item{Lois Ortea FCML for Kevin}
+\item{Paper metric, number of papers y axis, citations x axis}
 \vspace{2cm}
 \end{itemize}
 \textbf{Todo this upcoming week}
 \begin{todolist}
 \item{More alpha counts}
 \item{Finish Prelims work, start on disseration (by this weekend)}
+\item{Do calculations to show methodology is working}
+  \begin{itemize}
+  \item{Collect isotopes for 10 nuclides, to produce Cs137, and Nd148, plot as a function
+    of burnup}
+  \item{X-sections from IAEA, another student, Pyne probably can do it}
+  \item{Don't let perfect be the enemy of good}
+  \end{itemize}
 \vspace{2cm}
 \end{todolist}
 
@@ -7161,23 +7173,29 @@ diluted solutions.
 
 \experiment{CHEMLAB}
 \begin{todolist}
-\item{Teach Lab session}
-\item{Do practice run of next weeks lab}
+\item[\done]{Teach Lab session}
+\item[\done]{Do practice run of next weeks lab}
 \end{todolist}
 
 \experiment{Alpha_and_MassSpec}
 \textbf{Counting}
 \begin{todolist}
-\item{Stop alpha count $\boxed{9\ Ex3\ DF=100\ \mu l=10}$}
-\item{Start alpha count $\boxed{10\ Ex3\ DF=100\ \mu l=10}$}
+\item[\done]{Stop alpha count $\boxed{9\ Ex3\ DF=100\ \mu l=10}$}
+\item[\done]{Start alpha count $\boxed{10\ Ex3\ DF=100\ \mu l=10}$}
 \end{todolist}
-
 
 \experiment{Grad}
 \begin{todolist}
-\item{Get Dr. McDeavitt's signature}
+\item[\done]{Get Dr. McDeavitt's signature}
 \item{Work Dissertation}
 \end{todolist}
+
+\textbf{Things to do}
+\begin{todolist}
+\item{Update proposal per Dr. Folden's comments}
+\item{Update written portion of the exam per everyone's concern}
+\end{todolist}
+
 
 
 %-----------------------------------------------------------------
