--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -7114,7 +7114,7 @@ diluted solutions.
 
 \experiment{CHEMLAB}
 \begin{todolist}
-\item{Do the prelab for next week's lab (due tomorrow night)}
+\item[\done]{Do the prelab for next week's lab (due tomorrow night)}
 \end{todolist}
 
 
@@ -7168,7 +7168,7 @@ diluted solutions.
 %	LAB BOOK day
 %---------------------------------------------------------------
 
-\labday{Thursday February 23, 2017}
+\labday{Thursday March 2, 2017}
 
 
 \experiment{CHEMLAB}
@@ -7196,18 +7196,72 @@ diluted solutions.
 \item{Update written portion of the exam per everyone's concern}
 \end{todolist}
 
+\experiment{Grad}
+\begin{todolist}
+\item{Got Pyne working...kind of}
+\end{todolist}
 
 
 %-----------------------------------------------------------------
 %	LAB BOOK day
 %---------------------------------------------------------------
 
-\labday{Friday February 24, 2017}
+\labday{Friday March 3, 2017}
+
+\experiment{Alpha_and_MassSpec}
+\textbf{Counting}
+\begin{todolist}
+\item[\done]{Stop alpha count $\boxed{10\ Ex3\ DF=100\ \mu l=10}$}
+\item[\done]{Start alpha count $\boxed{8\ Ex4\ DF=100\ \mu l=10}$}
+\end{todolist}
 
 \experiment{Grad}
+\textbf{Things to do}
 \begin{todolist}
-\item{Start Coding Part of project}
+\item[\done]{Update proposal per Dr. Folden's comments}
+\item[\done]{Update written portion of the exam per everyone's concern}
 \end{todolist}
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+\labday{Saturday March 4, 2017}
+
+\textbf{For the people}
+\begin{todolist}
+\item[\done]{Get water for the people}
+\end{todolist}
+
+\experiment{CHEMLAB}
+\begin{todolist}
+\item[\done]{Write Procedures for next weeks lab}
+\item{Grade students papers}
+\end{todolist}
+
+\experiment{Alpha_and_MassSpec}
+\textbf{Counting}
+\begin{todolist}
+\item[\done]{Stop alpha count $\boxed{8\ Ex4\ DF=100\ \mu l=10}$}
+\item[\done]{Start alpha count $\boxed{9\ Ex4\ DF=100\ \mu l=10}$}
+\end{todolist}
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Sunday March 5, 2017}
+
+\experiment{CHEMLAB}
+\begin{todolist}
+\item{Grade students papers}
+\end{todolist}
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Monday March 6, 2017}
 
 \experiment{CHEMLAB}
 \begin{todolist}
@@ -7218,8 +7272,81 @@ diluted solutions.
 \experiment{Alpha_and_MassSpec}
 \textbf{Counting}
 \begin{todolist}
-\item{Stop alpha count $\boxed{10\ Ex3\ DF=100\ \mu l=10}$}
-\item{Start alpha count $\boxed{8\ Ex4\ DF=100\ \mu l=10}$}
+\item[\done]{Stop alpha count $\boxed{9\ Ex4\ DF=100\ \mu l=10}$}
+\item[\done]{Start alpha count $\boxed{10\ Ex4\ DF=100\ \mu l=10}$}
+\end{todolist}
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Tuesday March 7, 2017}
+
+\experiment{CHEMLAB}
+\begin{todolist}
+\item[\done]{Teach Two sections of lab}
+\end{todolist}
+
+\experiment{Alpha_and_MassSpec}
+\textbf{Counting}
+\begin{todolist}
+\item[\done]{Stop alpha count $\boxed{10\ Ex4\ DF=100\ \mu l=10}$}
+\item[\done]{Start alpha count $\boxed{8\ BEx1\ DF=100\ \mu l=10}$}
+\end{todolist}
+
+\textbf{Random Stuff}
+\begin{itemize}
+\item{Update this notebook}
+\end{itemize}
+
+\experiment{Grad}
+\begin{todolist}
+\item{Program with 10 isotopes}
+  \begin{itemize}
+  \item{Gather X-sections for 10 isotopes}
+  \item{Process the 10 isotopes with a thermal flux spectrum}
+  \item{Compare to ORIGEN2 processed x-sections}
+  \item{Plug into bateman solver - use constant power approximation}
+  \item{Plot \tss{148}Nd and \tss{137}Cs as a function of burnup}
+  \end{itemize}
+\end{todolist}
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Wednesday March 8, 2017}
+
+\experiment{Alpha_and_MassSpec}
+\textbf{Counting}
+\begin{todolist}
+\item{Stop alpha count $\boxed{8\ BEx1\ DF=100\ \mu l=10}$}
+\item{Start alpha count $\boxed{9\ BEx1\ DF=100\ \mu l=10}$}
+\end{todolist}
+
+\experiment{CHEMLAB}
+\begin{todolist}
+\item[\done]{Do the prelab for next week's lab (due tomorrow night)}
+\end{todolist}
+
+\experiment{ResearchMeeting}
+\textbf{Prepare for Research meeting}
+\begin{itemize}
+\item{Got program up and running}
+\end{itemize}
+\textbf{Notes}
+\begin{itemize}
+\item{Note}
+\vspace{2cm}
+\end{itemize}
+\textbf{Todo this upcoming week}
+\begin{todolist}
+\item{More alpha counts - 7 more}
+\item{Write Disseration}
+\item{Program stuff}
+\item{Grade a mountain of papers}
+\vspace{2cm}
 \end{todolist}
 
 
@@ -7228,24 +7355,67 @@ diluted solutions.
 %	LAB BOOK day
 %---------------------------------------------------------------
 
-\labday{Saturday February 25, 2017}
+\labday{Thursday March 9, 2017}
+
+
+\experiment{CHEMLAB}
+\begin{todolist}
+\item{Teach Lab session}
+\item{Do practice run of next weeks lab}
+\end{todolist}
+
+\experiment{Alpha_and_MassSpec}
+\textbf{Counting}
+\begin{todolist}
+\item{Stop alpha count $\boxed{9\ BEx1\ DF=100\ \mu l=10}$}
+\item{Start alpha count $\boxed{10\ BEx1\ DF=100\ \mu l=10}$}
+\end{todolist}
 
 \experiment{Grad}
 \begin{todolist}
-\item{Program end of dissertation}
+\item{Get stuff working for disseratation}
 \end{todolist}
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Friday March 10, 2017}
+
+\experiment{CHEMLAB}
+\textbf{Grading}
+\begin{todolist}
+\item{Grade all the papers}
+\end{todolist}
+
+\experiment{Alpha_and_MassSpec}
+\textbf{Counting}
+\begin{todolist}
+\item{Stop alpha count $\boxed{10\ BEx1\ DF=100\ \mu l=10}$}
+\item{Start alpha count $\boxed{8\ BEx2\ DF=100\ \mu l=10}$}
+\end{todolist}
+
+\experiment{Grad}
+\begin{todolist}
+\item{Sorry Need to grade}
+\end{todolist}
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Saturday March 11, 2017}
 
 \experiment{CHEMLAB}
 \begin{todolist}
 \item{Grade students papers}
 \end{todolist}
 
-
 \experiment{Alpha_and_MassSpec}
 \textbf{Counting}
 \begin{todolist}
-\item{Stop alpha count $\boxed{8\ Ex4\ DF=100\ \mu l=10}$}
-\item{Start alpha count $\boxed{9\ Ex4\ DF=100\ \mu l=10}$}
+\item{Stop alpha count $\boxed{8\ BEx2\ DF=100\ \mu l=10}$}
+\item{Start alpha count $\boxed{9\ BEx2\ DF=100\ \mu l=10}$}
 \end{todolist}
 
 
@@ -7253,28 +7423,12 @@ diluted solutions.
 %	LAB BOOK day
 %---------------------------------------------------------------
 
-\labday{Sunday February 26, 2017}
+\labday{Sunday March 12, 2017}
 
-\textbf{Write Procedures for next week}
-
-\experiment{Grad}
+\experiment{Random}
 \begin{todolist}
-\item{Program end of dissertation}
+\item{Write out these notes for next week}
 \end{todolist}
-
-\experiment{CHEMLAB}
-\begin{todolist}
-\item{Grade students papers}
-\end{todolist}
-
-
-\experiment{Alpha_and_MassSpec}
-\textbf{Counting}
-\begin{todolist}
-\item{Stop alpha count $\boxed{9\ Ex4\ DF=100\ \mu l=10}$}
-\item{Start alpha count $\boxed{10\ Ex4\ DF=100\ \mu l=10}$}
-\end{todolist}
-
 
 
 
