--- a/Updates/March1_8_Update/main.tex
+++ b/Updates/March1_8_Update/main.tex
@@ -217,20 +217,14 @@
 \end{frame}
 
 
-\begin{frame}{Bateman Results}
-  \begin{columns}
-    \begin{column}{0.5\textwidth}
+\begin{frame}{Flux Plot}
       \begin{figure}[H]
         \vspace*{-1cm}
         \begin{center}
-          \includegraphics[scale = 0.4]{../../Calculations/Bateman/PlotBU/Plots/BurnCsComp_grams.pdf}
+          \includegraphics[scale = 0.55]{Cross_Section_Over_Spectrum.pdf}
           \vspace{-0.5cm}
         \end{center}
       \end{figure}
-    \end{column}
-    \begin{column}{0.5\textwidth}
-    \end{column}
-  \end{columns}  
 \end{frame}
 
 
