--- a/Updates/March1_8_Update/main.tex
+++ b/Updates/March1_8_Update/main.tex
@@ -255,18 +255,6 @@
   \end{table}
 \end{frame}
 
-\begin{frame}{ORIGEN2 Model}
-  \begin{center}
-    $
-    \frac{552.8\ \text{g \tss{137}Cs}}{Mt}\cdot
-    \frac{6.022E23\ \text{atoms}}{137\ \text{g \tss{137}Cs}}\cdot
-    \frac{\text{Fission}}{0.06\ \text{atoms}}\cdot
-    \frac{200\ \text{MeV}}{\text{Fission}}\cdot
-    \frac{1.602E-19\ \text{MJ}}{1\ \text{MeV}}\cdot
-    \frac{1\ \text{day}}{86400\ \text{s}}=15,018\ \frac{\text{MWd}}{Mt}$
-  \end{center}
-\end{frame}
-
 
 
 \section{Bateman Results}
@@ -302,6 +290,18 @@
 \end{frame}
 
 
+
+\begin{frame}{\tss{137}Cs Calculation}
+  \begin{center}
+    $
+    \frac{552.8\ \text{g \tss{137}Cs}}{Mt}\cdot
+    \frac{6.022E23\ \text{atoms}}{137\ \text{g \tss{137}Cs}}\cdot
+    \frac{\text{Fission}}{0.06\ \text{atoms}}\cdot
+    \frac{200\ \text{MeV}}{\text{Fission}}\cdot
+    \frac{1.602E-19\ \text{MJ}}{1\ \text{MeV}}\cdot
+    \frac{1\ \text{day}}{86400\ \text{s}}=15,018\ \frac{\text{MWd}}{Mt}$
+  \end{center}
+\end{frame}
 
 
 
