--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -763,7 +763,7 @@ There are 6 things to count.
 \begin{todolist}
 \item[\done]{Prepare and count alpha sample of Stock}
   \begin{itemize}
-  \item{Take 20 $\mu$l of $\boxed{4\ Dilution}$, put onto
+  \item{Take {\color{red}\st{20} 5/11/2017} 10 $\mu$l of $\boxed{4\ Dilution}$, put onto
   concentric circle disk plates (innermost circle) $\boxed{D1}$}
     \begin{itemize}
     \item{It should be noted that once an alpha source is
@@ -2342,11 +2342,11 @@ uranium saturation to 45\% saturation (reference)
   $\boxed{8\ Chip}$
 \end{center}
 \begin{center}
-  20+/-0.2 $\mu$l of $\boxed{8,9,10\ aq\ Dilution}$ dropped onto
+  \st{20} 10?+/-0.2 $\mu$l of $\boxed{8,9,10\ aq\ Dilution}$ dropped onto
   $\boxed{9\ Chip}$
 \end{center}
 \begin{center}
-  20+/-0.2 $\mu$l of $\boxed{8,9,10\ aq\ Dilution}$ dropped onto
+  \st{20} 10?+/-0.2 $\mu$l of $\boxed{8,9,10\ aq\ Dilution}$ dropped onto
   $\boxed{10\ Chip}$
 \end{center}
 \begin{todolist}
@@ -6477,7 +6477,7 @@ diluted solutions.
   \end{todolist}
   \vspace{0.3cm}
   \begin{center}
-    10+/-0.12 $\mu$l of $\boxed{8\ Org\ Tot\ Dilution}$ dropped onto
+    \st{10}6.5+/-0.12 $\mu$l of $\boxed{8\ Org\ Tot\ Dilution}$ dropped onto
     $\boxed{8\ Org\ Tot\ Chip}$
   \end{center}
   
@@ -6486,7 +6486,7 @@ diluted solutions.
   \end{todolist}
   \vspace{0.3cm}
   \begin{center}
-    10+/-0.12 $\mu$l of $\boxed{9\ Org\ Tot\ Dilution}$ dropped onto
+    \st{10}7.5+/-0.12 $\mu$l of $\boxed{9\ Org\ Tot\ Dilution}$ dropped onto
     $\boxed{9\ Org\ Tot\ Chip}$
   \end{center}
 
